testsuite/tests/grammar/invalid_lexers/token_action_4.lkt
import common

lexer foo_lexer {
    @text(start_ignore_layout=1) example <- "example"
}
